*Fixed CalendarListItem text overflow. *Fixed focus border and removed autocomplete *Fixed EDIT_TODO_DATE

--- a/src/components/CalendarListItem/CalendarListItem.css
+++ b/src/components/CalendarListItem/CalendarListItem.css
@@ -6,15 +6,17 @@
   border-radius: 4px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 
 .titleDateText {
+  max-height: inherit;
   display: flex;
-  flex: auto;
+  flex: 1;
   align-items: center;
-  justify-content: space-between;
-  height: 10%;
+  justify-content: flex-start;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
