--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -27,6 +27,7 @@
   background-color: rgb(100, 140, 250, 0.1);
   border-color: rgb(100, 140, 250);
   transition: border-color 0.3s ease;
+  outline: none;
 }
 
 .enterButton {
